added export default to US and World pages which resolved the build issue.

--- a/components/api/news-api/NewsApi.module.css
+++ b/components/api/news-api/NewsApi.module.css
@@ -15,8 +15,8 @@
 }
 
 .news-card-img {
-    width: 60vw; 
-    height: 30vh; 
+    width: 280px; 
+    height: 180px; 
     background-color: gray;
 }
 
